--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 
 # HTID:6937838: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
 php_value display_errors 1
+ErrorDocument 404 /gzghost/not-found-page.php
 # DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:6937838:
